--- a/src/main/resources/assets/randomenchants2/lang/en_us.json
+++ b/src/main/resources/assets/randomenchants2/lang/en_us.json
@@ -1,1 +1,2 @@
 "enchantment.randomenchants2.light_mending_enchant": "Light Mending"
+"enchantment.randomenchants2.light_mending_enchant.desc": "Slowly repairs items depending on the light level"
