Added Obsidian Buster

--- a/src/main/resources/assets/randomenchants2/lang/en_us.json
+++ b/src/main/resources/assets/randomenchants2/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "enchantment.randomenchants2.solar_enchant": "Solar"
+  "enchantment.randomenchants2.solar_enchant": "Solar",
+  "enchantment.randomenchants2.obsidian_buster": "Obsidian Buster"
 }
