Finally Added Randomness Enchantment

--- a/src/main/resources/assets/randomenchants2/lang/en_us.json
+++ b/src/main/resources/assets/randomenchants2/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "enchantment.randomenchants2.solar_enchant": "Solar",
-  "enchantment.randomenchants2.obsidian_buster": "Obsidian Buster"
+  "enchantment.randomenchants2.obsidian_buster": "Obsidian Buster",
+  "enchantment.randomenchants2.randomness": "Randomness"
 }
