--- a/src/main/resources/assets/randomenchants2/lang/en_us.json
+++ b/src/main/resources/assets/randomenchants2/lang/en_us.json
@@ -12,5 +12,9 @@
   "enchantment.randomenchants2.eternal" : "Eternal",
   "enchantment.randomenchants2.eternal.desc" : "Items with the Enchantment won't despawn after being dropped",
   "enchantment.randomenchants2.dungeoneering" : "Dungeoneering",
-  "enchantment.randomenchants2.dungeoneering.desc" : "When killing an entity, there's a chance for the entity to drop items from a dungeon loot table"
+  "enchantment.randomenchants2.dungeoneering.desc" : "When killing an entity, there's a chance for the entity to drop items from a dungeon loot table",
+  "enchantment.randomenchants2.grappling" : "Grappling",
+  "enchantment.randomenchants2.grappling.desc" : "When getting hooked to a block, be prepared to land correctly!",
+  "enchantment.randomenchants2.snatching" : "Snatching",
+  "enchantment.randomenchants2.snatching.desc" : "Pull out the armor off of any Mob"
 }
