Added Torches Enchantment

--- a/src/main/resources/assets/randomenchants2/lang/en_us.json
+++ b/src/main/resources/assets/randomenchants2/lang/en_us.json
@@ -1,24 +1,26 @@
 {
-  "enchantment.randomenchants2.solar_enchant": "Solar",
-  "enchantment.randomenchants2.solar_enchant.desc" : "Repairs Items When there's light ot it's daytime",
-  "enchantment.randomenchants2.obsidian_buster": "Obsidian Buster",
+  "enchantment.randomenchants2.solar_enchant": "Solar [All]",
+  "enchantment.randomenchants2.solar_enchant.desc" : "Repairs Items When there's light or it's daytime",
+  "enchantment.randomenchants2.obsidian_buster": "Obsidian Buster [Pickaxe]",
   "enchantment.randomenchants2.obsidian_buster.desc": "Breaks Obsidian Faster",
-  "enchantment.randomenchants2.randomness": "Randomness",
+  "enchantment.randomenchants2.randomness": "Randomness [Digger]",
   "enchantment.randomenchants2.randomness.desc": "Gives random blocks/items when a block is broken",
-  "enchantment.randomenchants2.magnetic" : "Magnetic",
+  "enchantment.randomenchants2.magnetic" : "Magnetic [Digger]",
   "enchantment.randomenchants2.magnetic.desc" : "Broken blocks go directly into the player's inventory",
-  "enchantment.randomenchants2.stone_lover" : "Stone Lover",
+  "enchantment.randomenchants2.stone_lover" : "Stone Lover [Pickaxe]",
   "enchantment.randomenchants2.stone_lover.desc" : "80% Chance of repairing the pickaxe when braking Stone Blocks",
-  "enchantment.randomenchants2.eternal" : "Eternal",
+  "enchantment.randomenchants2.eternal" : "Eternal [All]",
   "enchantment.randomenchants2.eternal.desc" : "Items with the Enchantment won't despawn after being dropped",
-  "enchantment.randomenchants2.dungeoneering" : "Dungeoneering",
+  "enchantment.randomenchants2.dungeoneering" : "Dungeoneering [Weapons]",
   "enchantment.randomenchants2.dungeoneering.desc" : "When killing an entity, there's a chance for the entity to drop items from a dungeon loot table",
-  "enchantment.randomenchants2.grappling" : "Grappling",
+  "enchantment.randomenchants2.grappling" : "Grappling [Fishing Rod]",
   "enchantment.randomenchants2.grappling.desc" : "When getting hooked to a block, be prepared to land correctly!",
-  "enchantment.randomenchants2.snatching" : "Snatching",
+  "enchantment.randomenchants2.snatching" : "Snatching [Fishing Rod]",
   "enchantment.randomenchants2.snatching.desc" : "Pull out the armor off of any Mob",
-  "enchantment.randomenchants2.resistant" : "Resistant",
+  "enchantment.randomenchants2.resistant" : "Resistant [All]",
   "enchantment.randomenchants2.resistant.desc" : "Items can't be damaged",
-  "enchantment.randomenchants2.teleportation" : "Teleportation",
-  "enchantment.randomenchants2.teleportation.desc" : "Teleports the shooter where the projectile was shot except when there's lava"
+  "enchantment.randomenchants2.teleportation" : "Teleportation [Bow & CrossBow]",
+  "enchantment.randomenchants2.teleportation.desc" : "Teleports the shooter where the projectile was shot except when there's lava",
+  "enchantment.randomenchants2.torches" : "Torches [Bow & CrossBow]",
+  "enchantment.randomenchants2.torches.desc" : "Illuminate the are with an arrow!"
 }
