Added Lots of enchantments

--- a/src/main/resources/assets/randomenchants2/lang/en_us.json
+++ b/src/main/resources/assets/randomenchants2/lang/en_us.json
@@ -52,5 +52,23 @@
   "enchantment.randomenchants2.homing" : "Homing",
   "enchantment.randomenchants2.homing.desc" : "Arrows will go directly to where you're aiming",
   "enchantment.randomenchants2.paralysis" : "Paralysis",
-  "enchantment.randomenchants2.paralysis.desc" : "Paralyze hit entities"
+  "enchantment.randomenchants2.paralysis.desc" : "Paralyze hit entities",
+  "enchantment.randomenchants2.cursed_jumping" : "Cursed Jumping",
+  "enchantment.randomenchants2.cursed_jumping.desc" : "Hit enemies will jump high enough to kill themselves",
+  "enchantment.randomenchants2.deflect" : "Deflect",
+  "enchantment.randomenchants2.deflect.desc" : "Deflecting arrows is a thing now",
+  "enchantment.randomenchants2.floating" : "Floating",
+  "enchantment.randomenchants2.floating.desc" : "Send hit or shot enemies flying when they jump",
+  "enchantment.randomenchants2.instant_death" : "Instant Death",
+  "enchantment.randomenchants2.instant_death.desc" : "Instantly kill hit or shot enemies",
+  "enchantment.randomenchants2.harvest" : "Harvest",
+  "enchantment.randomenchants2.harvest.desc" : "Harvest plant blocks with an arrow",
+  "enchantment.randomenchants2.lightning" : "Lightning",
+  "enchantment.randomenchants2.lightning.desc" : "Strike lightning at hit entities",
+  "enchantment.randomenchants2.lumberjack" : "Lumberjack",
+  "enchantment.randomenchants2.lumberjack.desc" : "Get a whole tree down with only 1 block broken [Not leaves supported]",
+  "enchantment.randomenchants2.true_life_steal" : "True Life Steal",
+  "enchantment.randomenchants2.true_life_steal.desc" : "gives a *vampiric* touch to minecraft",
+  "enchantment.randomenchants2.reflect" : "Reflect",
+  "enchantment.randomenchants2.reflect.desc" : "Reflect projectile attacks back to the enemy"
 }
