--- a/src/main/resources/assets/randomenchants2/lang/en_us.json
+++ b/src/main/resources/assets/randomenchants2/lang/en_us.json
@@ -40,7 +40,7 @@
   "enchantment.randomenchants2.quick_draw" : "Quick Draw",
   "enchantment.randomenchants2.quick_draw.desc" : "Draw arrows faster depending on the level",
   "enchantment.randomenchants2.zen_sanctuary" : "Zen Sanctuary",
-  "enchantment.randomenchants2.zen_sanctuary.desc" : "Nearby mobs are in a zen state...",
+  "enchantment.randomenchants2.zen_sanctuary.desc" : "Peacefulness all around you",
   "enchantment.randomenchants2.discord" : "Discord",
   "enchantment.randomenchants2.discord.desc" : "allows the player's attacks to provoke nearby hostile mobs to target the hit entity",
   "enchantment.randomenchants2.swift" : "Swift",
